# device_board_rpi

./: OAT.xml  README.en.md  README_zh.md  default.xml
common/: BUILD.gn  build_bootimg.py  make_rpi_sdcard_image.py
common/camera/: BUILD.gn
common/camera/device_manager/: BUILD.gn
common/camera/device_manager/include/: mx6s_csi.h
common/camera/metadata_manager/: BUILD.gn
common/camera/pipeline_core/: BUILD.gn
common/camera/pipeline_core/node/: codec_node.cpp  v4l2_source_node.cpp
common/kernel/: BUILD.gn  build_kernel.sh  check_patch.sh  make_dtb.mk  make_kernel.sh  make_kernel_32.mk  make_kernel_64.mk
common/kernel/configs/: bcm2711_oh_defconfig32  bcm2711_oh_defconfig64
demo/: BUILD.gn  camdemo.c  fb_demo.c  usb_camera.c  usb_camera.h
rpi3/: BUILD.gn  README_zh.md  device.gni  ohos.build
rpi3/cfg/: BUILD.gn  init.rpi3.cfg
rpi3/rpiboot/: config.txt
rpi4/: BUILD.gn  README_zh.md  device.gni  ohos.build
rpi4/cfg/: BUILD.gn  fstab.rpi4  init.modprobe.sh  init.rpi4.cfg
rpi4/image/: BUILD.gn  build_bootimg.py  make_rpi_sdcard_image.py
rpi4/image/ptgenbuild/: BUILD.gn  cyg_crc32.c  ptgen.c
rpi4/kernel/: BUILD.gn  build_kernel.sh  check_patch.sh  make_dtb.mk  make_kernel.sh
rpi4/patches/: base_patch.sh
rpi4/rpiboot/: config.txt
system_patch/: BUILD.gn  main_thread.cpp  system_patch.sh
system_patch/applications/: ohos.build
system_patch/base/: appspawn_adapter.cpp
system_patch/graphic_2d/: egl_blob_cache.cpp  egl_wrapper_entry.cpp  pixel_map_from_surface.cpp  rs_base_render_engine.cpp  rs_draw_cmd.cpp  surface_image.cpp
system_patch/kernel/: xhci.h
system_patch/whitelist/: compile_standard_whitelist.json
