# Copyright (c) 2024 Institute of Software, Chinese Academy of Sciences. 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/clang/clang.gni")
import("//build/ohos.gni")

action("rpi_bootimg") {
  deps=["../common/kernel:rpi_build_kernel"]
    script = "../common/build_bootimg.py"
    outputs = [ "$root_build_dir/packages/phone/images/boot.img" ]
    args = [ rebase_path("$root_build_dir/packages/phone"),rebase_path("//device/board/rpi/$product_name/rpiboot") ]
}


action("rpi_image") {
  deps = [ 
  ":rpi_bootimg",
  "//build/core/gn:images",
  "//device/soc/broadcom/common:software_group"
   ]
  script = "../common/make_rpi_sdcard_image.py"
  outputs = [ "$root_build_dir/packages/phone/images/rpi_image.img" ]
  args = [
    "--output",
    rebase_path("$root_build_dir/packages/phone/images/rpi_image.img"),
    "--userdata",
    "1000M",
    rebase_path("$root_build_dir/packages/phone/images/boot.img"),
    rebase_path("$root_build_dir/packages/phone/images/system.img"),
    rebase_path("$root_build_dir/packages/phone/images/vendor.img"),
    rebase_path("$root_build_dir/packages/phone/images/userdata.img"),
    "--ptpath",
    rebase_path("$root_build_dir/clang_x64/utils/utils")
  ]
}
