# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.

  import("//build/ohos.gni")
  import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")


  ohos_executable("camdemo") 
  {
    sources = [
      "./camdemo.c",
    ]
    part_name = "sipeed_products"
    subsystem_name = "sipeed_products"
    #install_images = [ chipset_base_dir ]
    install_images = [ "vendor" ]
    install_enable = true
  }
  ohos_executable("usb_camera") 
  {
    sources = [
      "./usb_camera.c",
    ]
    include_dirs = ["./"]
    part_name = "sipeed_products"
    subsystem_name = "sipeed_products"
    #install_images = [ chipset_base_dir ]
    install_images = [ "vendor" ]
    install_enable = true
  }
    ohos_executable("fbdemo") 
  {
    sources = [
      "./fb_demo.c",
    ]
    part_name = "sipeed_products"
    subsystem_name = "sipeed_products"
    #install_images = [ chipset_base_dir ]
    install_images = [ "vendor" ]
    install_enable = true
  }